Auth, dice completed, stories and user almost complete

--- a/APIGateway/templates/navbar.html
+++ b/APIGateway/templates/navbar.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="{{ home_url }}search">Search</a>
         </li>
     </ul>
-    <form class="form-inline" action="{{ home_url }}users/logout" method="POST">
+    <form class="form-inline" action="{{ home_url }}logout" method="POST">
         <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
     </form>
 {% else %}
