--- a/APIGateway/templates/roll_dice.html
+++ b/APIGateway/templates/roll_dice.html
@@ -8,48 +8,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">
-        Story Tellers
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        {% if current_user.is_authenticated %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:5000/users/{{ current_user.id }}">My Wall</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search">Search</a>
-                </li>
-            </ul>
-        {% else %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-            </ul>
-            <form class="form-inline">
-                <button class="btn btn-success mr-2" type="button" onclick="window.location='/users/login'">Sign in
-                </button>
-                <button class="btn btn-secondary mr-2" type="button" onclick="window.location='/users/create'">Sign up
-                </button>
-            </form>
-        {% endif %}
-    </div>
-</nav>
+{% include 'navbar.html' %}
 <div class="container my-3 bg-light cont my-3 rounded pb-3" style="padding: 30px;">
     <div class="row d-flex justify-content-center">
         <h3 class="text-center">{{ dice_number }} rolled words</h3>
@@ -72,7 +31,7 @@
             <form action="" method="POST">
                 <div class="btn-group" role="group">
                     <button type="button" class="btn btn-outline-secondary"
-                            onclick="window.location='{{ settings_url }}'">Return to settings
+                            onclick="window.location='{{ home_url }}stories/new/settings'">Return to settings
                     </button>
                     <button type="button" class="btn btn-outline-info" onclick="$(this).parents('form:first').submit()">
                         Re-roll dice
@@ -83,7 +42,7 @@
     </div>
     <div class="row mt-3">
         <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
-            <form action="{{ write_url }}" method="GET">
+            <form action="{{ home_url }}stories/new/write" method="GET">
                 <button type="button" class="btn btn-outline-success" onclick="$(this).parents('form:first').submit()">
                     Write story
                 </button>
