--- a/APIGateway/templates/search.html
+++ b/APIGateway/templates/search.html
@@ -9,61 +9,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="/">
-        Story Tellers
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        {% if current_user.is_authenticated %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/{{ current_user.id }}">My Wall</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories/new/settings">New Story</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/search">Search</a>
-                </li>
-            </ul>
-            <form class="form-inline" action="/users/logout" method="POST">
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
-            </form>
-        {% else %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-            </ul>
-            <form class="form-inline">
-                <button class="btn btn-success mr-2" type="button" onclick="window.location='/users/login'">Sign in
-                </button>
-                <button class="btn btn-secondary mr-2" type="button" onclick="window.location='/users/create'">Sign up
-                </button>
-            </form>
-        {% endif %}
-    </div>
-</nav>
-
+{% include 'navbar.html' %}
 <div class="container bg-light cont my-3 rounded" style="padding: 30px;">
     <div class="row mb-3">
         <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
@@ -72,7 +18,7 @@
     </div>
     <div class="row pb-3">
         <div class="col-xs-12 col-sm-12">
-            <form action="{{ search_url }}" method="GET">
+            <form action="{{ home_url }}search" method="GET">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" name="query" id="query" required>
                     <div class="input-group-append">
@@ -89,7 +35,7 @@
                 {% for user in list_of_users %}
                     <li class="list-group-item align-items-center">
                         <b>{{ user.firstname }} {{ user.lastname }}</b>
-                        <a class="btn btn-secondary float-right" href="{{ users_url }}/{{ user.id }}">SHOW WALL</a>
+                        <a class="btn btn-secondary float-right" href="{{ home_url }}users/{{ user.id }}">SHOW WALL</a>
                     </li>
                 {% endfor %}
             </ul>
@@ -112,8 +58,8 @@
             </div>
             <p style="text-align: center;">({{ story.date }})</p>
             <div class="card-footer">
-                <a class="btn btn-primary" href="{{ story_url }}/{{ story.id }}">OPEN</a>
-                <a class="btn btn-secondary" href="users/{{ story.author_id }}">SHOW AUTHOR</a>
+                <a class="btn btn-primary" href="{{ home_url }}stories/{{ story.id }}">OPEN</a>
+                <a class="btn btn-secondary" href="{{ home_url }}users/{{ story.author_id }}">SHOW AUTHOR</a>
             </div>
         </div>
     </div>
