--- a/APIGateway/templates/stories.html
+++ b/APIGateway/templates/stories.html
@@ -8,61 +8,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">
-        Story Tellers
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        {% if current_user.is_authenticated %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:5000/users/{{ current_user.id }}">My Wall</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories/new/settings">New Story</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search">Search</a>
-                </li>
-            </ul>
-            <form class="form-inline" action="/users/logout" method="POST">
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
-            </form>
-        {% else %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-            </ul>
-            <form class="form-inline">
-                <button class="btn btn-success mr-2" type="button" onclick="window.location='/users/login'">Sign in
-                </button>
-                <button class="btn btn-secondary mr-2" type="button" onclick="window.location='/users/create'">Sign up
-                </button>
-            </form>
-        {% endif %}
-    </div>
-</nav>
-
+{% include 'navbar.html' %}
 <div class="container bg-light cont my-3 rounded" style="padding: 30px;">
     <div class="row mb-3">
         <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
@@ -82,12 +28,12 @@
     {% endwith %}
     <div class="row mb-3">
         <div class="col-xs-12 col-sm-2 d-flex justify-content-center">
-            <button type="button" class="btn btn-outline-success" onclick="window.location='{{ latest_url }}'">Latest
+            <button type="button" class="btn btn-outline-success" onclick="window.location='{{ home_url }}stories/latest'">Latest
                 Story
             </button>
         </div>
         <div class="col-xs-12 col-sm-8 d-flex justify-content-center">
-            <form action="{{ range_url }}" method="GET">
+            <form action="{{ home_url }}stories/range" method="GET">
                 <div class="form-row">
                     <div class="col">
                         <input type="date" class="form-control" name="begin" id="begin">
@@ -104,7 +50,7 @@
             </form>
         </div>
         <div class="col-xs-12 col-sm-2 d-flex justify-content-center">
-            <a class="btn btn-outline-secondary" href="{{ random_recent_url }}">Random Story</a>
+            <a class="btn btn-outline-secondary" href="{{ home_url }}stories/random">Random Story</a>
         </div>
     </div>
     {% set card_count = [] %}
@@ -119,8 +65,8 @@
             </div>
             <p style="text-align: center;">({{ story.date }})</p>
             <div class="card-footer">
-                <a class="btn btn-primary" style="margin-right: 20px;" href="stories/{{ story.id }}">OPEN STORY</a>
-                <a class="btn btn-secondary" href="{{ wall_url }}/{{ story.author_id }}">SHOW AUTHOR</a>
+                <a class="btn btn-primary" style="margin-right: 20px;" href="{{ home_url }}stories/{{ story.id }}">OPEN STORY</a>
+                <a class="btn btn-secondary" href="{{ home_url }}users/{{ story.author_id }}">SHOW AUTHOR</a>
             </div>
         </div>
     </div>
