--- a/APIGateway/templates/user_stories.html
+++ b/APIGateway/templates/user_stories.html
@@ -18,65 +18,12 @@
     </script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">
-        Story Tellers
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        {% if current_user.is_authenticated %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="http://127.0.0.1:5000/users/{{ current_user.id }}">My Wall</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories/new/settings">New Story</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search">Search</a>
-                </li>
-            </ul>
-            <form class="form-inline" action="/users/logout" method="POST">
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Logout</button>
-            </form>
-        {% else %}
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/stories">Read Stories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Show Users</a>
-                </li>
-            </ul>
-            <form class="form-inline">
-                <button class="btn btn-success mr-2" type="button" onclick="window.location='/users/login'">Sign in
-                </button>
-                <button class="btn btn-secondary mr-2" type="button" onclick="window.location='/users/create'">Sign up
-                </button>
-            </form>
-        {% endif %}
-    </div>
-</nav>
+{% include 'navbar.html' %}
 <div class="container bg-light cont my-3 rounded" style="padding: 30px;">
     {% if current_user.is_authenticated %}
         <div class="row mb-3">
             <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
-                <h3>Your stories</h3>
+                <h3>Stories</h3>
             </div>
         </div>
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -98,7 +45,7 @@
                                     <td style="width: 500px;">
                                         <b>Preview: </b>{{ story.text }}
                                     </td>
-                                    <td rowspan="2"><a class="btn btn-primary" href="/stories/{{ story.id }}">Show
+                                    <td rowspan="2"><a class="btn btn-primary" href="{{ home_url }}stories/{{ story.id }}">Show
                                         story</a></td>
                                 </tr>
                                 <tr>
