--- a/APIGateway/templates/search.html
+++ b/APIGateway/templates/search.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row pb-3">
         <div class="col-xs-12 col-sm-12">
-            <form action="{{ home_url }}search" method="GET">
+            <form action="" method="POST">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" name="query" id="query" required>
                     <div class="input-group-append">
