Completed user wall

--- a/APIGateway/templates/wall.html
+++ b/APIGateway/templates/wall.html
@@ -36,17 +36,17 @@
                             <tr>
                                 <td>{{ stats["stories_stats"]["num_stories"] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.reactions_stats.tot_num_reactions }}</td>
+                                <td>{{ stats['reactions_stats']['tot_num_reactions'] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.stories_stats.tot_num_dice }}</td>
+                                <td>{{ stats['stories_stats']['tot_num_dice'] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.follower_stats.num_followers }}</td>
+                                <td>{{ stats['follower_stats']['num_followers'] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.follower_stats.follower_last_month }}</td>
+                                <td>{{ stats['follower_stats']['followers_last_month'] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.reactions_stats.avg_reactions }}</td>
+                                <td>{{ stats['reactions_stats']['avg_reactions'] }}</td>
                                 <td rowspan="2">&nbsp;</td>
-                                <td>{{ stats.stories_stats.avg_dice }}</td>
+                                <td>{{ stats['stories_stats']['avg_dice'] }}</td>
                             </tr>
                             <tr>
                                 <td><b># Stories</b></td>
@@ -62,7 +62,7 @@
                     <div class="row mb-3" style="margin: 0 auto; text-align: center;">
                         <div class="col-xl-12 col-sm-12 justify-content-center" style="margin-top: 25px;">
                             <a class="btn btn-primary" href="{{ home_url }}users/{{ user_info.id }}/stories"><span class="book-open">My stories</span></a>
-                            <a class="btn btn-secondary" href="{{ home_url }}users/{{ user_info.id }}/drafts"><span class="firstdraft">My drafts</span></a>
+                            <a class="btn btn-secondary" href="{{ home_url }}stories/drafts"><span class="firstdraft">My drafts</span></a>
                             <br/><br/>
                             <form action="{{ home_url }}users/{{ user_info.id }}/followers" method="get">
                                 <input type="submit" class="btn btn-primary"
