--- a/APIGateway/templates/drafts.html
+++ b/APIGateway/templates/drafts.html
@@ -23,7 +23,11 @@
     {% if current_user.is_authenticated %}
         <div class="row mb-3">
             <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
-                <h3>Your draft stories</h3>
+                {% if drafts|length > 0 %}
+                <h3>Your drafts stories:</h3>
+                {% else %}
+                <h3>No drafts!</h3>
+                {% endif %}
             </div>
         </div>
         {% with messages = get_flashed_messages(with_categories=true) %}
