--- a/APIGateway/templates/user_stories.html
+++ b/APIGateway/templates/user_stories.html
@@ -23,7 +23,11 @@
     {% if current_user.is_authenticated %}
         <div class="row mb-3">
             <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
+                {% if stories|length > 0 %}
                 <h3>Stories</h3>
+                {% else %}
+                <h3>No stories!</h3>
+                {% endif %}
             </div>
         </div>
         {% with messages = get_flashed_messages(with_categories=true) %}
