--- a/APIGateway/templates/followers.html
+++ b/APIGateway/templates/followers.html
@@ -12,7 +12,11 @@
 <div class="container my-3">
     <div class="row d-flex justify-content-center">
         <div class="col-xs-12 col-sm-8 bg-light cont rounded pb-3" style="padding: 30px;">
+            {% if users|length > 0 %}
             <h3 class="text-center">Followers List</h3><br/>
+            {% else %}
+            <h3 class="text-center">No followers! 😔</h3><br/>
+            {% endif %}
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     <div class="flashes" style="text-align: center;">
