--- a/APIGateway/templates/search.html
+++ b/APIGateway/templates/search.html
@@ -16,6 +16,17 @@
             <h3>Search a user or a story</h3>
         </div>
     </div>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="row mb-3">
+                    <div class="col-xs-12 col-sm-12 d-flex justify-content-center">
+                        <span class="{{ category }} text-danger">{{ message }}</span>
+                    </div>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="row pb-3">
         <div class="col-xs-12 col-sm-12">
             <form action="" method="POST">
